# Earnings_call_project-main

./: .gitattributes  .gitignore  CLAUDE.md  DECISIONS.md  DESIGN.md  HANDOFF.md  JOURNAL.md  LOOP.md  OLDWORK.md  README.md  TASKS.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: guardrail.ps1
.github/workflows/: ci.yml
cloud/osc/: README.md  RUNBOOK.md  stage.sh
cloud/osc/apptainer/: ecvol-llm.def
cloud/osc/slurm/: extract.sbatch
configs/: example.yaml
data/coverage/: crosscheck_exceptions.csv  crosscheck_report.csv  crosscheck_summary.json  earnings21_qc_validation.csv  fincall_audio_durations.csv  fincall_audio_qc.csv  fincall_audio_qc_summary.csv  fincall_egemaps_summary.csv  fincall_ingest_report.csv  fincall_join_audit.csv  fincall_llm_label_sheet.csv  fincall_llm_labels_rater1.csv  fincall_section_audit.csv  fincall_sections.csv  fincall_splits_report.csv  llm_probe_report.md  maec_audio_features.csv  maec_ingest_report.csv  maec_join_audit.csv  maec_missing_tickers.csv  maec_section_audit.csv  maec_sections.csv  maec_splits_report.csv  prices_coverage.csv  prices_sources.json  targets_report.csv
data/identity/: fincall_identity.csv  fincall_identity_audit.csv  fincall_name_overrides.csv
data/manifests/: fincall.json  fincall_audio_egemaps.json  fincall_audio_emotion2vec.json  fincall_audio_wavlm.json  fincall_calls.json  fincall_chunks.json  fincall_targets.json  fincall_text_embeddings.json  fincall_text_finbert.json  fincall_text_surface.json  maec.json  maec_calls.json  maec_chunks.json  maec_targets.json  maec_text_embeddings.json  maec_text_finbert.json  maec_text_surface.json  prices.json  targets.json
data/results/: audio_gender.csv  audio_probe.csv  audio_shuffle.csv  controls_probe.csv  result_controls.csv  result_table_1.csv  result_table_1.md  result_table_1.tex  result_table_2.csv  result_table_2.md  result_table_2.tex  result_table_3.csv  result_table_3.md  result_table_3.tex  result_table_4.csv  result_table_4.md  result_table_4.tex  result_table_4_fusion.csv  result_table_4_peryear.csv
data/results/figures/: target_handcheck.csv
data/splits/: fincall_combined.csv  fincall_temporal.csv  fincall_ticker_disjoint.csv  maec_combined.csv  maec_temporal.csv  maec_ticker_disjoint.csv
docs/: llm_feature_rubric.md
ingest/: Ratings_1.xlsx  ingest.md
ingest/_extracted/: MultimodalVolatility.html
notebooks/: analyze_identity_residue.py  audit_identity_sample.py  debug_resolve.py  diff_identity.py  explore_fincall_identity.py  explore_qa_generation.py  figures_result_table_1.py  list_lost.py  probe_lookup_misses.py  sample_unresolved.py  validate_results.py  verify_identity_overrides.py
paper/: README.md  build.sh  main.tex  refs.bib
paper/figures/: pipeline.tex
paper/sections/: 00-abstract.tex  01-introduction.tex  02-related-work.tex  03-data.tex  04-methods.tex  05-experiments.tex  06-results.tex  07-discussion.tex  08-conclusion.tex  09-limitations.tex  10-ethics.tex  A1-complete-results.tex
paper/tables/: baselines.tex  controls.tex  text.tex
src/ecvol/: __init__.py  cli.py  tracking.py
src/ecvol/config/: __init__.py  load.py  schema.py
src/ecvol/data/: __init__.py  calendar.py  calls.py  fetch.py  fincall_identity.py  fincall_ingest.py  maec_ingest.py  manifests.py  prices.py  splits.py  targets.py  tiingo.py
src/ecvol/eval/: __init__.py  audio_eval.py  controls.py  evaluate.py  grid.py  metrics.py  report.py  significance.py  stage2.py  stage3.py  stage4.py
src/ecvol/features/: __init__.py
src/ecvol/features/audio/: __init__.py  assemble.py  egemaps.py  emotion2vec.py  qc.py  wavlm.py
src/ecvol/features/llm/: __init__.py  audit.py  extract.py  prompts.py  ratings.py  reading.py  schema.py
src/ecvol/features/text/: __init__.py  _common.py  assemble.py  embeddings.py  finbert.py  sections.py  surface.py
src/ecvol/models/: __init__.py  baselines.py  fusion.py  gbdt.py  heads.py  ticker_only.py
tests/: test_audio_qc.py  test_baselines.py  test_calendar.py  test_cli.py  test_config.py  test_controls.py  test_egemaps.py  test_emotion2vec.py  test_evaluate.py  test_fetch.py  test_fincall_identity.py  test_fincall_ingest.py  test_fusion.py  test_gbdt.py  test_grid.py  test_llm_audit.py  test_llm_extract.py  test_llm_ratings.py  test_llm_schema.py  test_maec_ingest.py  test_manifests.py  test_metrics.py  test_prices.py  test_report.py  test_sections.py  test_significance.py  test_splits.py  test_stage2.py  test_stage3.py  test_targets.py  test_text_features.py  test_tiingo.py  test_tracking.py  test_wavlm.py
