[project]
name = "ecvol"
version = "0.1.0"
description = "Predicting post-earnings-call stock volatility from transcript text and call audio"
requires-python = ">=3.12"
dependencies = [
    "arch>=8.0.0",
    "exchange-calendars>=4.13.2",
    "gdown>=6.1.0",
    "lightgbm>=4.6.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pypdf>=6.13.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "typer>=0.15",
    "yfinance>=1.4.1",
]

[project.scripts]
ecvol = "ecvol.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.11",
    "pre-commit>=4",
]
# GPU feature stack (Phase 3+ frozen text/audio/LLM features). Not installed by
# default or in CI (`uv sync` installs only `dev`); install with
# `uv sync --group gpu`. torch is pinned to the CUDA 12.8 index for Blackwell
# (RTX 50-series, sm_120) support. See DECISIONS 2026-06-19 (T3.2).
gpu = [
    "torch>=2.7",
    "sentence-transformers>=3.0",
    "transformers>=4.44",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.ruff]
src = ["src", "tests"]
line-length = 100
extend-exclude = ["legacy"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
