[project]
name = "ecvol"
version = "0.1.0"
description = "Predicting post-earnings-call stock volatility from transcript text and call audio"
requires-python = ">=3.12"
dependencies = [
    "arch>=8.0.0",
    "exchange-calendars>=4.13.2",
    "gdown>=6.1.0",
    "lightgbm>=4.6.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pypdf>=6.13.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "typer>=0.15",
    "yfinance>=1.4.1",
]

[project.scripts]
ecvol = "ecvol.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.11",
    "pre-commit>=4",
]
# GPU feature stack (Phase 3+ frozen text/audio/LLM features). Not installed by
# default or in CI (`uv sync` installs only `dev`); install with
# `uv sync --group gpu`. torch is pinned to the CUDA 12.8 index for Blackwell
# (RTX 50-series, sm_120) support. See DECISIONS 2026-06-19 (T3.2).
gpu = [
    "torch>=2.7",
    "torchaudio>=2.7",  # required by funasr (emotion2vec+, T4.3)
    "sentence-transformers>=3.0",
    "transformers>=4.44",
    "outlines>=0.1",  # JSON-schema-constrained decoding for LLM features (T6.2); cross-platform
    "bitsandbytes>=0.43",  # local 4-bit (nf4) inference of the 7B model on the 16GB GPU (T6.2)
]
# Audio feature stack (eGeMAPS via openSMILE; CPU). Not in default/CI installs;
# `uv sync --group audio`. Imported lazily (T4.2).
audio = [
    "opensmile>=2.5",
    "funasr>=1.1",  # emotion2vec+ (T4.3); pulls librosa/modelscope/numba — runs with the gpu group
]
# Cloud-burst LLM stack for the OSC (Linux) extraction run (T6.2). vLLM has no
# Windows wheel, so it is gated behind a Linux marker — `uv lock` stays resolvable
# on Windows, and this group is installed ONLY inside the OSC Apptainer container
# (`uv sync --group cloud`), never locally or in CI.
cloud = [
    "vllm>=0.6; sys_platform == 'linux'",
    "outlines>=0.1",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.ruff]
src = ["src", "tests"]
line-length = 100
extend-exclude = ["legacy"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
